deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-go-k8s
  namespace: ns-go-k8s
spec:
  selector:
    app: app-go-k8s
  ports:
    - protocol: TCP
      port: 8080
